@@ -28,7 +28,7 @@
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
-      <version>20090211</version>
+      <version>20131018</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
